--- a/ReactApps/app/package.json
+++ b/ReactApps/app/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.2.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
